// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Login page component anonymous component renders correctly 1`] = `
<Styled(div)
  onKeyPress={[Function]}
>
  <ForwardRef(Button)
    color="primary"
    onClick={[Function]}
    sx={
      Object {
        "width": "352px",
      }
    }
    variant="contained"
  >
    <ForwardRef(Typography)
      color="inherit"
      noWrap={true}
      style={
        Object {
          "marginTop": 3,
        }
      }
    >
      login.login-button
    </ForwardRef(Typography)>
  </ForwardRef(Button)>
</Styled(div)>
`;

exports[`Login page component anonymous component renders failedToLogin error correctly 1`] = `
<Styled(div)
  onKeyPress={[Function]}
>
  <Styled(ForwardRef(Typography))>
    login.login-error-msg
  </Styled(ForwardRef(Typography))>
  <ForwardRef(Button)
    color="primary"
    onClick={[Function]}
    sx={
      Object {
        "width": "352px",
      }
    }
    variant="contained"
  >
    <ForwardRef(Typography)
      color="inherit"
      noWrap={true}
      style={
        Object {
          "marginTop": 3,
        }
      }
    >
      login.login-button
    </ForwardRef(Typography)>
  </ForwardRef(Button)>
</Styled(div)>
`;

exports[`Login page component anonymous component renders signedOutDueToTokenInvalidation error correctly 1`] = `
<Styled(div)
  onKeyPress={[Function]}
>
  <Styled(ForwardRef(Typography))>
    login.token-invalid-msg
  </Styled(ForwardRef(Typography))>
  <ForwardRef(Button)
    color="primary"
    onClick={[Function]}
    sx={
      Object {
        "width": "352px",
      }
    }
    variant="contained"
  >
    <ForwardRef(Typography)
      color="inherit"
      noWrap={true}
      style={
        Object {
          "marginTop": 3,
        }
      }
    >
      login.login-button
    </ForwardRef(Typography)>
  </ForwardRef(Button)>
</Styled(div)>
`;

exports[`Login page component credential component renders correctly 1`] = `
<Styled(div)
  onKeyPress={[Function]}
>
  <ForwardRef(TextField)
    color="secondary"
    disabled={false}
    inputProps={
      Object {
        "aria-label": "login.username-arialabel",
      }
    }
    label="login.username-placeholder"
    onChange={[Function]}
    sx={
      Object {
        "marginTop": 1,
        "width": "352px",
      }
    }
    value=""
    variant="standard"
  />
  <ForwardRef(TextField)
    color="secondary"
    disabled={false}
    inputProps={
      Object {
        "aria-label": "login.password-arialabel",
      }
    }
    label="login.password-placeholder"
    onChange={[Function]}
    sx={
      Object {
        "marginTop": 1,
        "width": "352px",
      }
    }
    type="password"
    value=""
    variant="standard"
  />
  <ForwardRef(Typography)
    sx={
      Object {
        "fontSize": 14,
        "marginLeft": "auto",
        "paddingBottom": "24px",
        "paddingTop": "12px",
      }
    }
  >
    <ForwardRef(Link)
      href="login.forgotten-your-password-link"
      underline="hover"
    >
      login.forgotten-your-password
    </ForwardRef(Link)>
  </ForwardRef(Typography)>
  <ForwardRef(Button)
    color="primary"
    disabled={true}
    onClick={[Function]}
    sx={
      Object {
        "width": "352px",
      }
    }
    variant="contained"
  >
    <ForwardRef(Typography)
      color="inherit"
      noWrap={true}
      style={
        Object {
          "fontWeight": "bold",
          "marginTop": 3,
        }
      }
    >
      login.login-button
    </ForwardRef(Typography)>
  </ForwardRef(Button)>
  <ForwardRef(Typography)
    sx={
      Object {
        "fontSize": 14,
        "paddingBottom": "24px",
        "paddingTop": "12px",
      }
    }
  >
    <ForwardRef(Link)
      href="login.need-help-signing-in-link"
      underline="hover"
    >
      login.need-help-signing-in
    </ForwardRef(Link)>
  </ForwardRef(Typography)>
  <DividerWithText>
    <ForwardRef(Typography)>
      or
    </ForwardRef(Typography)>
  </DividerWithText>
  <ForwardRef(Typography)
    sx={
      Object {
        "color": [Function],
        "fontSize": 14,
        "paddingBottom": "24px",
        "paddingTop": "12px",
      }
    }
  >
    <Trans
      i18nKey="login.dont-have-an-account-sign-up-now"
      t={[Function]}
    >
      Don't have an account?
       
      <ForwardRef(Link)
        href="login.dont-have-an-account-sign-up-now-link"
        underline="hover"
      >
        Sign up now
      </ForwardRef(Link)>
    </Trans>
  </ForwardRef(Typography)>
</Styled(div)>
`;

exports[`Login page component credential component renders failedToLogin error correctly 1`] = `
<Styled(div)
  onKeyPress={[Function]}
>
  <Styled(ForwardRef(Typography))>
    login.login-error-msg
  </Styled(ForwardRef(Typography))>
  <ForwardRef(TextField)
    color="secondary"
    disabled={false}
    inputProps={
      Object {
        "aria-label": "login.username-arialabel",
      }
    }
    label="login.username-placeholder"
    onChange={[Function]}
    sx={
      Object {
        "marginTop": 1,
        "width": "352px",
      }
    }
    value=""
    variant="standard"
  />
  <ForwardRef(TextField)
    color="secondary"
    disabled={false}
    inputProps={
      Object {
        "aria-label": "login.password-arialabel",
      }
    }
    label="login.password-placeholder"
    onChange={[Function]}
    sx={
      Object {
        "marginTop": 1,
        "width": "352px",
      }
    }
    type="password"
    value=""
    variant="standard"
  />
  <ForwardRef(Typography)
    sx={
      Object {
        "fontSize": 14,
        "marginLeft": "auto",
        "paddingBottom": "24px",
        "paddingTop": "12px",
      }
    }
  >
    <ForwardRef(Link)
      href="login.forgotten-your-password-link"
      underline="hover"
    >
      login.forgotten-your-password
    </ForwardRef(Link)>
  </ForwardRef(Typography)>
  <ForwardRef(Button)
    color="primary"
    disabled={true}
    onClick={[Function]}
    sx={
      Object {
        "width": "352px",
      }
    }
    variant="contained"
  >
    <ForwardRef(Typography)
      color="inherit"
      noWrap={true}
      style={
        Object {
          "fontWeight": "bold",
          "marginTop": 3,
        }
      }
    >
      login.login-button
    </ForwardRef(Typography)>
  </ForwardRef(Button)>
  <ForwardRef(Typography)
    sx={
      Object {
        "fontSize": 14,
        "paddingBottom": "24px",
        "paddingTop": "12px",
      }
    }
  >
    <ForwardRef(Link)
      href="login.need-help-signing-in-link"
      underline="hover"
    >
      login.need-help-signing-in
    </ForwardRef(Link)>
  </ForwardRef(Typography)>
  <DividerWithText>
    <ForwardRef(Typography)>
      or
    </ForwardRef(Typography)>
  </DividerWithText>
  <ForwardRef(Typography)
    sx={
      Object {
        "color": [Function],
        "fontSize": 14,
        "paddingBottom": "24px",
        "paddingTop": "12px",
      }
    }
  >
    <Trans
      i18nKey="login.dont-have-an-account-sign-up-now"
      t={[Function]}
    >
      Don't have an account?
       
      <ForwardRef(Link)
        href="login.dont-have-an-account-sign-up-now-link"
        underline="hover"
      >
        Sign up now
      </ForwardRef(Link)>
    </Trans>
  </ForwardRef(Typography)>
</Styled(div)>
`;

exports[`Login page component credential component renders signedOutDueToTokenInvalidation error correctly 1`] = `
<Styled(div)
  onKeyPress={[Function]}
>
  <Styled(ForwardRef(Typography))>
    login.token-invalid-msg
  </Styled(ForwardRef(Typography))>
  <ForwardRef(TextField)
    color="secondary"
    disabled={false}
    inputProps={
      Object {
        "aria-label": "login.username-arialabel",
      }
    }
    label="login.username-placeholder"
    onChange={[Function]}
    sx={
      Object {
        "marginTop": 1,
        "width": "352px",
      }
    }
    value=""
    variant="standard"
  />
  <ForwardRef(TextField)
    color="secondary"
    disabled={false}
    inputProps={
      Object {
        "aria-label": "login.password-arialabel",
      }
    }
    label="login.password-placeholder"
    onChange={[Function]}
    sx={
      Object {
        "marginTop": 1,
        "width": "352px",
      }
    }
    type="password"
    value=""
    variant="standard"
  />
  <ForwardRef(Typography)
    sx={
      Object {
        "fontSize": 14,
        "marginLeft": "auto",
        "paddingBottom": "24px",
        "paddingTop": "12px",
      }
    }
  >
    <ForwardRef(Link)
      href="login.forgotten-your-password-link"
      underline="hover"
    >
      login.forgotten-your-password
    </ForwardRef(Link)>
  </ForwardRef(Typography)>
  <ForwardRef(Button)
    color="primary"
    disabled={true}
    onClick={[Function]}
    sx={
      Object {
        "width": "352px",
      }
    }
    variant="contained"
  >
    <ForwardRef(Typography)
      color="inherit"
      noWrap={true}
      style={
        Object {
          "fontWeight": "bold",
          "marginTop": 3,
        }
      }
    >
      login.login-button
    </ForwardRef(Typography)>
  </ForwardRef(Button)>
  <ForwardRef(Typography)
    sx={
      Object {
        "fontSize": 14,
        "paddingBottom": "24px",
        "paddingTop": "12px",
      }
    }
  >
    <ForwardRef(Link)
      href="login.need-help-signing-in-link"
      underline="hover"
    >
      login.need-help-signing-in
    </ForwardRef(Link)>
  </ForwardRef(Typography)>
  <DividerWithText>
    <ForwardRef(Typography)>
      or
    </ForwardRef(Typography)>
  </DividerWithText>
  <ForwardRef(Typography)
    sx={
      Object {
        "color": [Function],
        "fontSize": 14,
        "paddingBottom": "24px",
        "paddingTop": "12px",
      }
    }
  >
    <Trans
      i18nKey="login.dont-have-an-account-sign-up-now"
      t={[Function]}
    >
      Don't have an account?
       
      <ForwardRef(Link)
        href="login.dont-have-an-account-sign-up-now-link"
        underline="hover"
      >
        Sign up now
      </ForwardRef(Link)>
    </Trans>
  </ForwardRef(Typography)>
</Styled(div)>
`;

exports[`Login page component login page doesn't render dropdown if anon is the only other authenticator 1`] = `
<Styled(div)>
  <ForwardRef(Paper)
    sx={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "column",
        "marginTop": 8,
        "paddingTop": "24px",
        "width": 400,
      }
    }
  >
    <ForwardRef(Avatar)
      sx={
        Object {
          "alignItems": "center",
          "backgroundColor": [Function],
          "color": "#FFFFFF",
          "margin": "12px",
        }
      }
    >
      <Memo(ForwardRef(LockOutlinedIcon)) />
    </ForwardRef(Avatar)>
    <ForwardRef(Typography)
      component="h1"
      style={
        Object {
          "fontWeight": "bold",
          "paddingBottom": "16px",
        }
      }
      variant="h5"
    >
      login.title
    </ForwardRef(Typography)>
    <CredentialsLoginScreen
      auth={
        Object {
          "failedToLogin": false,
          "loading": false,
          "provider": TestAuthProvider {
            "authUrl": undefined,
            "autoLogin": undefined,
            "mnemonic": "",
            "redirectUrl": null,
            "token": null,
            "user": null,
          },
          "signedOutDueToTokenInvalidation": false,
        }
      }
      location={
        Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        }
      }
      mnemonic="user/pass"
      verifyUsernameAndPassword={[Function]}
    />
  </ForwardRef(Paper)>
</Styled(div)>
`;

exports[`Login page component login page renders anonymous login if mnemonic present with no keys 1`] = `
<Styled(div)>
  <ForwardRef(Paper)
    sx={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "column",
        "marginTop": 8,
        "paddingTop": "24px",
        "width": 400,
      }
    }
  >
    <ForwardRef(Avatar)
      sx={
        Object {
          "alignItems": "center",
          "backgroundColor": [Function],
          "color": "#FFFFFF",
          "margin": "12px",
        }
      }
    >
      <Memo(ForwardRef(LockOutlinedIcon)) />
    </ForwardRef(Avatar)>
    <ForwardRef(Typography)
      component="h1"
      style={
        Object {
          "fontWeight": "bold",
          "paddingBottom": "16px",
        }
      }
      variant="h5"
    >
      login.title
    </ForwardRef(Typography)>
    <AnonLoginScreen
      auth={
        Object {
          "failedToLogin": false,
          "loading": false,
          "provider": TestAuthProvider {
            "authUrl": undefined,
            "autoLogin": undefined,
            "mnemonic": "nokeys",
            "redirectUrl": null,
            "token": null,
            "user": null,
          },
          "signedOutDueToTokenInvalidation": false,
        }
      }
      location={
        Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        }
      }
      mnemonic="nokeys"
      verifyUsernameAndPassword={[Function]}
    />
  </ForwardRef(Paper)>
</Styled(div)>
`;

exports[`Login page component login page renders credential component if no redirect url 1`] = `
<Styled(div)>
  <ForwardRef(Paper)
    sx={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "column",
        "marginTop": 8,
        "paddingTop": "24px",
        "width": 400,
      }
    }
  >
    <ForwardRef(Avatar)
      sx={
        Object {
          "alignItems": "center",
          "backgroundColor": [Function],
          "color": "#FFFFFF",
          "margin": "12px",
        }
      }
    >
      <Memo(ForwardRef(LockOutlinedIcon)) />
    </ForwardRef(Avatar)>
    <ForwardRef(Typography)
      component="h1"
      style={
        Object {
          "fontWeight": "bold",
          "paddingBottom": "16px",
        }
      }
      variant="h5"
    >
      login.title
    </ForwardRef(Typography)>
    <CredentialsLoginScreen
      auth={
        Object {
          "failedToLogin": false,
          "loading": false,
          "provider": TestAuthProvider {
            "authUrl": undefined,
            "autoLogin": undefined,
            "mnemonic": undefined,
            "redirectUrl": null,
            "token": null,
            "user": null,
          },
          "signedOutDueToTokenInvalidation": false,
        }
      }
      location={
        Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        }
      }
      verifyUsernameAndPassword={[Function]}
    />
  </ForwardRef(Paper)>
</Styled(div)>
`;

exports[`Login page component login page renders credentials login if mnemonic present + user/pass is selected 1`] = `
<Styled(div)>
  <ForwardRef(Paper)
    sx={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "column",
        "marginTop": 8,
        "paddingTop": "24px",
        "width": 400,
      }
    }
  >
    <ForwardRef(Avatar)
      sx={
        Object {
          "alignItems": "center",
          "backgroundColor": [Function],
          "color": "#FFFFFF",
          "margin": "12px",
        }
      }
    >
      <Memo(ForwardRef(LockOutlinedIcon)) />
    </ForwardRef(Avatar)>
    <ForwardRef(Typography)
      component="h1"
      style={
        Object {
          "fontWeight": "bold",
          "paddingBottom": "16px",
        }
      }
      variant="h5"
    >
      login.title
    </ForwardRef(Typography)>
    <CredentialsLoginScreen
      auth={
        Object {
          "failedToLogin": false,
          "loading": false,
          "provider": TestAuthProvider {
            "authUrl": undefined,
            "autoLogin": undefined,
            "mnemonic": "user/pass",
            "redirectUrl": null,
            "token": null,
            "user": null,
          },
          "signedOutDueToTokenInvalidation": false,
        }
      }
      location={
        Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        }
      }
      mnemonic="user/pass"
      verifyUsernameAndPassword={[Function]}
    />
  </ForwardRef(Paper)>
</Styled(div)>
`;

exports[`Login page component login page renders dropdown if mnemonic present + there are multiple mnemonics (but it filters out anon) 1`] = `
<Styled(div)>
  <ForwardRef(Paper)
    sx={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "column",
        "marginTop": 8,
        "paddingTop": "24px",
        "width": 400,
      }
    }
  >
    <ForwardRef(Avatar)
      sx={
        Object {
          "alignItems": "center",
          "backgroundColor": [Function],
          "color": "#FFFFFF",
          "margin": "12px",
        }
      }
    >
      <Memo(ForwardRef(LockOutlinedIcon)) />
    </ForwardRef(Avatar)>
    <ForwardRef(Typography)
      component="h1"
      style={
        Object {
          "fontWeight": "bold",
          "paddingBottom": "16px",
        }
      }
      variant="h5"
    >
      login.title
    </ForwardRef(Typography)>
    <LoginSelector
      auth={
        Object {
          "failedToLogin": false,
          "loading": false,
          "provider": TestAuthProvider {
            "authUrl": undefined,
            "autoLogin": undefined,
            "mnemonic": "",
            "redirectUrl": null,
            "token": null,
            "user": null,
          },
          "signedOutDueToTokenInvalidation": false,
        }
      }
      location={
        Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        }
      }
      mnemonic=""
      mnemonics={
        Array [
          Object {
            "keys": Array [
              Object {
                "name": "username",
              },
              Object {
                "name": "password",
              },
            ],
            "mnemonic": "user/pass",
          },
          Object {
            "keys": Array [
              Object {
                "name": "username",
              },
              Object {
                "name": "password",
              },
            ],
            "mnemonic": "ldap",
          },
        ]
      }
      setMnemonic={[Function]}
      verifyUsernameAndPassword={[Function]}
    />
  </ForwardRef(Paper)>
</Styled(div)>
`;

exports[`Login page component login page renders redirect component if redirect url present 1`] = `
<Styled(div)>
  <ForwardRef(Paper)
    sx={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "column",
        "marginTop": 8,
        "paddingTop": "24px",
        "width": 400,
      }
    }
  >
    <ForwardRef(Avatar)
      sx={
        Object {
          "alignItems": "center",
          "backgroundColor": [Function],
          "color": "#FFFFFF",
          "margin": "12px",
        }
      }
    >
      <Memo(ForwardRef(LockOutlinedIcon)) />
    </ForwardRef(Avatar)>
    <ForwardRef(Typography)
      component="h1"
      style={
        Object {
          "fontWeight": "bold",
          "paddingBottom": "16px",
        }
      }
      variant="h5"
    >
      login.title
    </ForwardRef(Typography)>
    <RedirectLoginScreen
      auth={
        Object {
          "failedToLogin": false,
          "loading": false,
          "provider": TestAuthProvider {
            "authUrl": undefined,
            "autoLogin": undefined,
            "mnemonic": undefined,
            "redirectUrl": "test redirect",
            "token": null,
            "user": null,
          },
          "signedOutDueToTokenInvalidation": false,
        }
      }
      location={
        Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        }
      }
      verifyUsernameAndPassword={[Function]}
    />
  </ForwardRef(Paper)>
</Styled(div)>
`;

exports[`Login page component login page renders spinner if auth is loading 1`] = `
<Styled(div)>
  <ForwardRef(Paper)
    sx={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "column",
        "marginTop": 8,
        "paddingTop": "24px",
        "width": 400,
      }
    }
  >
    <ForwardRef(Avatar)
      sx={
        Object {
          "alignItems": "center",
          "backgroundColor": [Function],
          "color": "#FFFFFF",
          "margin": "12px",
        }
      }
    >
      <Memo(ForwardRef(LockOutlinedIcon)) />
    </ForwardRef(Avatar)>
    <ForwardRef(Typography)
      component="h1"
      style={
        Object {
          "fontWeight": "bold",
          "paddingBottom": "16px",
        }
      }
      variant="h5"
    >
      login.title
    </ForwardRef(Typography)>
    <CredentialsLoginScreen
      auth={
        Object {
          "failedToLogin": false,
          "loading": true,
          "provider": TestAuthProvider {
            "authUrl": undefined,
            "autoLogin": undefined,
            "mnemonic": undefined,
            "redirectUrl": null,
            "token": null,
            "user": null,
          },
          "signedOutDueToTokenInvalidation": false,
        }
      }
      location={
        Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        }
      }
      verifyUsernameAndPassword={[Function]}
    />
    <ForwardRef(CircularProgress)
      sx={
        Object {
          "marginBottom": 3,
        }
      }
    />
  </ForwardRef(Paper)>
</Styled(div)>
`;

exports[`Login page component redirect component renders correctly 1`] = `
<Styled(div)>
  <ForwardRef(Button)
    color="primary"
    disabled={false}
    onClick={[Function]}
    sx={
      Object {
        "width": "352px",
      }
    }
    variant="contained"
  >
    <ForwardRef(Typography)
      color="inherit"
      noWrap={true}
      style={
        Object {
          "marginTop": 3,
        }
      }
    >
      Login with Github
    </ForwardRef(Typography)>
  </ForwardRef(Button)>
</Styled(div)>
`;

exports[`Login page component redirect component renders failedToLogin error correctly 1`] = `
<Styled(div)>
  <Styled(ForwardRef(Typography))>
    login.login-redirect-error-msg
  </Styled(ForwardRef(Typography))>
  <ForwardRef(Button)
    color="primary"
    disabled={false}
    onClick={[Function]}
    sx={
      Object {
        "width": "352px",
      }
    }
    variant="contained"
  >
    <ForwardRef(Typography)
      color="inherit"
      noWrap={true}
      style={
        Object {
          "marginTop": 3,
        }
      }
    >
      Login with Github
    </ForwardRef(Typography)>
  </ForwardRef(Button)>
</Styled(div)>
`;
